--- a/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy1.Rmd
+++ b/Rscript/Ropls_with_permutated_variable_selection_Models_of_each_comparison_strategy1.Rmd
@@ -17,7 +17,7 @@ author: |
     | Marika Strom
 ---
 
-# Model 1. Models with userset p(corr) cutoff during variable selection and userset number of orthogonal variables pre and post variable selection
+# Model strategy 1. Models with userset p(corr) cutoff during variable selection and userset number of orthogonal variables pre and post variable selection
 
 ### Model descripton
 Model post variable selection using p(corr) cutoff `r paste(pcorr); if(pcorr_Model1=="according to p-value"){paste(" which correspond to p-value ", p_pearson_of_pcorr_cutoff)}` and has `r ortho_pre_vs_Model1` orthogonals in model pre variable selection and `r ortho_post_vs_Model1` orthogonals in model post variable selection
@@ -71,7 +71,7 @@ if (ortho_post_vs > 0) {
 
 ### Score plots
 
-```{R polt score model1}
+```{R plot score model1}
 
 if (ortho_post_vs > 0) {
   plot(result_Model1$aftervsdata.oplsda, typeVc = c("x-score"))
@@ -104,12 +104,12 @@ if (length(result_Model1$pcorrlistaftervs$pcorrlistaftervs) >= 50) {
 plot(result_Model1$aftervsdata.oplsda, typeVc = c("permutation"))
 ```
 
-### Permutation before variable selection
+### Permutation including variable selection
 Subjects were permutated and variable selection performed using p(corr) cutoff `r pcorr` corresponding to p-value `r p_pearson_of_pcorr_cutoff`,  with `r ortho_pre_vs_Model1` orthogonal variables in model pre varibale selection and `r ortho_post_vs_Model1` orthogonal variables in model post variable selection
 
 #### Table of permutation
 
-```{R permutation pre vs of model1}
+```{R permutation over vs of model1}
 
 testvariablename <- "permutated_models_Model1"
 testvariable <- exist_in_rdata(testvariablename, filename_rdata, directory_output_reports, directory_and_filename_rdata)
@@ -117,7 +117,7 @@ if (!is.null(testvariable)) {
   permutated_models_Model1 <- testvariable
 } else {
   permutated_models_Model1 <-
-    table_of_randomised_models_before_vs(
+    table_of_randomised_models_over_vs(
       subsetsampleID,
       colname_groupID,
       subsetdatamatrix,
@@ -125,7 +125,7 @@ if (!is.null(testvariable)) {
       ortho_post_vs,
       class = classordered,
       pcorr,
-      no_permutations_pre_vs,
+      no_permutations_over_vs,
       variable_selection_using_VIP
     )
 }
@@ -168,9 +168,9 @@ kable(percentage_and_pvalue_perm_Model1, row.names = T) %>%
   kable_styling(bootstrap_options = "striped", full_width = F, position = "left")
 ```
 
-#### Plot of permutations before variable selection
+#### Plot of permutations including variable selection
 
-```{R  plot permutation pre vs Model1, fig.height = 10}
+```{R  plot permutation over vs Model1, fig.height = 10}
 
 plotpermutationswithoriginalmodelandreg(permutated_models_Model1, subsetdatamatrix, ortho_pre_vs, ortho_post_vs, class = classordered, pcorr, variable_selection_using_VIP)
 
